<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/cyan"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_clasament"
        android:text="@string/clasament"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back2"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_doc_dummy"
            android:text="@string/doctor"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/spital"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/medie"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbars="vertical"
        />

    <Button
        android:id="@+id/clasament_close_btn"
        android:text="@string/inchidere"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>