<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/cyan">

    <TextView
        android:id="@+id/tv_titlu_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/detalii_spital"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_detalii_denumire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/denumire"
        android:textColor="@color/black"
      />

    <Button
        android:id="@+id/buton_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/afisare_in_google_maps"
        android:textAllCaps="false"
         />

    <Button
        android:id="@+id/buton_anulare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/anulare"
        android:textAllCaps="false"/>


</LinearLayout>