<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back2"
    android:padding="10dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_doctor"
        android:text="@string/doctor"
        android:layout_weight="1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tv_spital"
        android:text="@string/spital"
        android:layout_weight="1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tv_medie"
        android:text="@string/medie"
        android:layout_weight="1"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        />

</LinearLayout>