<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/c_utare_spital"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_toate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/afi_eaz_toate_spitalele"
            android:textColor="@color/dark_red"
            android:background="@drawable/back2"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/search_bar"
        app:mt_searchBarColor="@color/cyan"
        app:mt_hint="@string/mt_hint"
        app:mt_placeholder="@string/mt_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>