<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_denumire"
            android:padding="10dp"
            android:text="@string/denumire"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_categorie"
                android:text="@string/categorie"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:gravity="center"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tv_judet"
                android:text="@string/judet"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:background="@drawable/back"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>